--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,9 +13,15 @@
             <a class="text-xl" href="#">MyFlix</a>
         </h1>
         <ul class="flex gap-2">
-            <li class="px-2 py-1" tabindex="1">Home</li>
-            <li class="px-2 py-1" tabindex="1">Configurações</li>
-            <li class="px-2 py-1" tabindex="1">Sair</li>
+            <li class="px-2 py-1" tabindex="1">
+                <a href="./">Home</a>
+            </li>
+            <li class="px-2 py-1" tabindex="1">
+                <a href="./page/config/">Configurações</a>
+            </li>
+            <li class="px-2 py-1" tabindex="1">
+                <a href="./page/login/">Login</a>
+            </li>
         </ul>
     </nav>
 
