--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body class="w-full">
     <nav class="bg-violet-500 text-white font-semibold p-4 flex justify-between border-b border-violet-700">
         <h1 class="px-2 py-1" tabindex="1">
-            <a class="text-xl" href="#">MyFlix</a>
+            <a class="text-xl" href="./">MyFlix</a>
         </h1>
         <ul class="flex gap-2">
             <li class="px-2 py-1" tabindex="1">
