update config page

--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
         </h1>
         <ul class="flex gap-2">
             <li class="px-2 py-1" tabindex="1">
-                <a href="./">Home</a>
+                <a href="/">Home</a>
             </li>
             <li class="px-2 py-1" tabindex="1">
-                <a href="./page/config/">Configurações</a>
+                <a href="/page/config/">Configurações</a>
             </li>
             <li class="px-2 py-1" tabindex="1">
-                <a href="./page/login/">Login</a>
+                <a href="/page/login/">Logout</a>
             </li>
         </ul>
     </nav>
@@ -39,14 +39,17 @@
                 </select>
             </div>
         </section>
+
         <section id="progresso" class="bg-violet-100 px-32 py-8">
             <h2 class="text-2xl">Lista de Progresso</h2>
             <ul class="flex overflow-x-auto gap-4 py-4"></ul>
         </section>
+
         <section id="desejos" class="bg-violet-100 px-32 py-8">
             <h2 class="text-2xl">Lista de Desejos</h2>
             <ul class="flex border overflow-x-auto gap-4 py-4"></ul>
         </section>
+
     </main>
     
     <footer class="bg-violet-800">Minha footer</footer>
